# kittyview

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  minimal.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: kitty.rs  logo.rs  main.rs  svg.rs  terminal.rs
test/: visual-test.sh
