[package]
name = "kittyview"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Display images in kitty-compatible terminals"
repository = "https://github.com/gominimal/kittyview"
readme = "README.md"
keywords = ["kitty", "terminal", "image", "graphics", "svg"]
categories = ["command-line-utilities", "graphics", "multimedia::images"]
exclude = ["minimal.toml", ".claude/"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "webp",
    "ico",
    "pnm",
    "tga",
    "qoi",
    "ff",
    "hdr",
] }
resvg = "0.47"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
base64 = "0.22"
